--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
 spring:
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
 #  profiles:
 #    active: local
   elasticsearch:
