--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,9 +18,13 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
 
 
 
 logging:
   level:
-    com.example: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
